cluster/gitops/system-controllers/kubevirt/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubevirt
specs:
  - description: virt-operator-strategy-dumper
    endpointSelector:
      matchLabels:
        kubevirt.io: virt-operator-strategy-dumper
    egress:
      # To API server
      - &to_apiserver
        toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
  - description: virt-api
    endpointSelector: &virt_api_selector
      matchLabels:
        kubevirt.io: virt-api
    egress:
      - *to_apiserver
      # To virt-handler for console port
      - toEndpoints:
          - &virt_handler_selector
            matchLabels:
              kubevirt.io: virt-handler
        toPorts:
          - ports:
              - port: "8186"
                protocol: TCP
      # To virt-launcher for VMI operations, port-forwarding, etc.
      - toEndpoints:
          - matchLabels:
              kubevirt.io: virt-launcher
            matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
    ingress:
      # Kubelet for healthcheck
      - &from_kubelet
        fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      # From API server for webhooks
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      # Metrics
      - &from_metrics_scraper
        fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
  - description: virt-controller
    endpointSelector:
      matchLabels:
        kubevirt.io: virt-controller
    egress:
      - *to_apiserver
    ingress:
      - *from_kubelet
      - *from_metrics_scraper
  # Deployed unconditionally from v1.9. Export traffic (clients -> proxy ->
  # virt-exporter pods) isn't allowed: VM export is unused here.
  - description: virt-exportproxy
    endpointSelector:
      matchLabels:
        kubevirt.io: virt-exportproxy
    egress:
      - *to_apiserver
    ingress:
      - *from_kubelet
      - *from_metrics_scraper
  - description: virt-handler
    endpointSelector: *virt_handler_selector
    egress:
      - *to_apiserver
      # To other instances for live migration
      - toEndpoints:
          - *virt_handler_selector
    ingress:
      - *from_kubelet
      - *from_metrics_scraper
      # From virt-api for console port
      - fromEndpoints:
          - *virt_api_selector
        toPorts:
          - ports:
              - port: "8186"
                protocol: TCP
      # From other instances for live migration
      - fromEndpoints:
          - *virt_handler_selector
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: virt-launcher
specs:
  - description: virt-launcher
    endpointSelector:
      matchLabels:
        kubevirt.io: virt-launcher
    ingress:
      # From virt-api for VMI operations, port-forwarding, etc.
      - fromEndpoints:
          - matchLabels:
              kubevirt.io: virt-api
              io.kubernetes.pod.namespace: system-controllers
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cdi
specs:
  - description: cdi-apiserver
    endpointSelector:
      matchLabels:
        cdi.kubevirt.io: cdi-apiserver
    egress:
      # To API server
      - &to_apiserver
        toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
    ingress:
      # Kubelet for healthcheck
      - &from_kubelet
        fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
      # From API server for webhooks
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
  - description: cdi-deployment
    endpointSelector:
      matchLabels:
        cdi.kubevirt.io: cdi-deployment
    egress:
      - *to_apiserver
      # To namespace-specific importers
      - toEndpoints:
          - matchLabels:
              cdi.kubevirt.io: importer
            matchExpressions:
              - key: io.kubernetes.pod.namespace
                operator: Exists
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
    ingress:
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
  - description: cdi-uploadproxy
    endpointSelector:
      matchLabels:
        cdi.kubevirt.io: cdi-uploadproxy
    egress:
      - *to_apiserver
    ingress:
      - *from_kubelet
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cdi-importer
specs:
  # CDI importer pods are created by the CDI controller in whatever namespace a
  # DataVolume lives (development coder workspaces, tug2 insurgency, ...). Their
  # egress need (DNS + Harbor) is a property of CDI, not the tenant, so this is
  # cluster-wide - like virt-launcher above - instead of duplicated per namespace.
  # A namespace importing from a different registry would add a supplemental
  # namespaced CNP (Cilium policy is additive).
  - description: cdi-importer
    endpointSelector:
      matchLabels:
        cdi.kubevirt.io: importer
    egress:
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
            rules:
              dns:
                - matchPattern: "*"
      # To Harbor (via the internal ingress gateway) to pull base images
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: "443"
                protocol: TCP
    ingress:
      # CDI controller coordinates / scrapes the importer
      - fromEndpoints:
          - matchLabels:
              cdi.kubevirt.io: cdi-deployment
              io.kubernetes.pod.namespace: system-controllers
        toPorts:
          - ports:
              - port: "8443"
                protocol: TCP
